tests/baselines/reference/privateNamesAndMethods.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(24,5): error TS2416: Property '#foo' in type 'B' is not assignable to the same property in base type 'A'.
  Type '(a: string) => void' is not assignable to type '(a: number) => void'.
    Types of parameters 'a' and 'a' are incompatible.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts (1 errors) ====
    class A {
        #foo(a: number) {}
        async #bar(a: number) {}
        async *#baz(a: number) {
            return 3;
        }
        #_quux: number;
        get #quux (): number {
            return this.#_quux;
        }
        set #quux (val: number) {
            this.#_quux = val; 
        }
        constructor () {
            this.#foo(30);
            this.#bar(30);
            this.#bar(30);
            this.#quux = this.#quux + 1;
            this.#quux++;
     }
    }
    
    class B extends A {
        #foo(a: string) {}
        ~~~~
!!! error TS2416: Property '#foo' in type 'B' is not assignable to the same property in base type 'A'.
!!! error TS2416:   Type '(a: string) => void' is not assignable to type '(a: number) => void'.
!!! error TS2416:     Types of parameters 'a' and 'a' are incompatible.
!!! error TS2416:       Type 'number' is not assignable to type 'string'.
        constructor () {
            super();
            this.#foo("str");
        }
    }
    